feat: add parameters field

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,19 @@
 			"script": "watch",
 			"problemMatcher": [
 				"$ts-webpack-watch",
-				"$tslint-webpack-watch"
+				"$tslint-webpack-watch",
+				{
+					"owner": "webpack",
+					"pattern": [
+						{
+							"regexp": "ERROR in (.*) (\\d+):(\\d+) (.*)",
+							"file": 1,
+							"line": 2,
+							"column": 3,
+							"message": 4
+						}
+					]
+				}
 			],
 			"isBackground": true,
 			"presentation": {
